# merlin

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp
include/Event/: EventInterface.hpp  EventListenerInterface.hpp
lib/glad/: glad.h
res/shader/: main.vert  main.vs
src/: DemoGame.cpp
src/Component/: Command.hpp  CursorMoveCommand.cpp  CursorMoveCommand.hpp  Exception.cpp  Exception.hpp  Logger.cpp  MoveCommand.cpp  MoveCommand.hpp  Timer.cpp  Timer.hpp  readme.txt
src/Component/Camera/: Camera.cpp  Camera.hpp  FPSCamera.cpp  FPSCamera.hpp
src/Event/: Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventDispatcherInterface.hpp  EventListener.cpp  EventListener.hpp
src/Event/Game/: TerminateEvent.hpp
src/Framework/: GLDebug.hpp  Game.cpp  Game.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Input.cpp  Input.hpp  InputHandler.cpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Utils.hpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.cpp  Window.h  Window.hpp  readme.txt
var/logs/: log.txt
